refactor: change success status code to 204 when tutor is deleted
